<resources>
    <string name="app_name">Lishe</string>
    <string name="vitamini_a">Vitamini A</string>
    <string name="mlo_kamili">Mlo kamili</string>
    <string name="covid_19">Covid-19</string>
    <string name="complimentary_feeding">Complimentary Feeding</string>
    <string name="unyonyeshaji_vid">Unyonyeshaji</string>
    <string name="madini_joto_vid">Madini Joto</string>
    <string name="dondoo_za_lishe">DONDOO ZA LISHE</string>
    <string name="gallery">GALLERY</string>
    <string name="tafiti">TAFITI</string>
    <string name="mazoezi">MAZOEZI</string>
    <string name="diet_plan">DIET PLAN</string>
    <string name="body_mass_index_bmi">BODY MASS INDEX (BMI)</string>
    <string name="imeandaliwa_na_ntaasisi_ya_chakula_na_lishe_tanzania_copyright_2021">Imeandaliwa na\nTaasisi ya Chakula na Lishe Tanzania Copyright 2021</string>
    <string name="darasa_la_lishe">darasa la lishe</string>
    <string name="vipeperushi">vipeperushi</string>
    <string name="maswali_na_majibu">maswali na majibu</string>
    <string name="vitamin_a">Vitamini A</string>
    <string name="ukimwi">UKIMWI</string>
    <string name="unyonyeshaji_pic">Unyonyeshaji</string>
    <string name="saratani">saratani</string>
    <string name="madini_joto_pic">madini joto</string>
    <string name="madini_joto">madini_joto_vid</string>
    <string name="unyonyeshaji">unyonyeshaji_vid</string>
    <string name="madin_joto">madini_joto_pic</string>
    <string name="unyonyeshaj">unyonyeshaji_pic</string>
    <string name="place_diet_plan_counter">place diet plan counter</string>
    <string name="uzito">Weight</string>
    <string name="calculatebmi">BMI</string>
    <string name="urefu">Height</string>
    <string name="your_bmi_is">YOUR BMI IS</string>
    <string name="jaza_urefu_wako">Enter your height</string>
    <string name="jaza_uzito_wako">Enter your weight</string>
    <string name="jaza_uzito_wako_hapa" >Enter your weight here</string>
    <string name="jaza_urefu_wako_hapa" >Enter your height here</string>
    <string name="gender">Gender</string>
    <string name="height">Your Height in Metres</string>
    <string name="weight">Your Weight in Kilograms</string>

    <string name="BMI_calculator">BMI calculator</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="questions_and_answers">Questions and Answers</string>
    <string name="print_materials">Print Materials</string>
    <string name="videos">Videos</string>
    <string name="selected_language">Choose a Language</string>
    <string name="mlo_kamili_animation">Balanced diet animation</string>
    <string name="mlo_kamili_kwaya">Balanced diet choir song</string>
    <string name="mlo_kamili_singeli">Balanced diet singeli song</string>
    <string name="umuhimu_wa_tangawizi">Advantages of ginger</string>
    <string name="umuhimu_wa_matunda">Advantages of fruits</string>
    <string name="makundi_ya_chakula">Food Groups</string>
    <string name="ulaji_unaofaa">Recommended Eating Chart</string>
    <string name="unyonyeshaji_na_covid19">Breastfeeding in times of COVID-19</string>
    <string name="nutrition_and_covid19">Nutrition and COVID-19</string>
    <string name="ulaji_unaofaa_">Recommended Eating</string>
</resources>