<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_1"
    tools:context=".MainActivity">


    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/image_slider"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:sliderAnimationDuration="1200"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="2"
        app:sliderStartAutoCycle="true">

    </com.smarteist.autoimageslider.SliderView>

    <Button
        android:id="@+id/imageButtonDietPlan"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@drawable/asset_03"
        android:shadowColor="@color/black"
        android:text="@string/diet_plan"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonNutritionFacts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonNutritionFacts"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/imageButtonBMIcalculator"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@drawable/asset_01"
        android:shadowColor="@color/black"
        android:text="@string/BMI_calculator"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonDietPlan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonDietPlan"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/imageButtonNutritionFacts"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:backgroundTint="#FFFFFF"
        android:drawableTop="@drawable/asset_02"
        android:shadowColor="@color/black"
        android:text="@string/nutrition_facts"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

</androidx.constraintlayout.widget.ConstraintLayout>